--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-big-calendar": "^0.38.2",
     "@types/react-dom": "^18.0.9",
     "dayjs": "^1.11.6",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
     "react-dom": "^18.2.0",
